js/src/tests/test262/built-ins/NativeErrors/TypeError/proto-from-ctor-realm.js
var
other
=
262
.
createRealm
(
)
.
global
;
var
newTarget
=
new
other
.
Function
(
)
;
var
err
;
newTarget
.
prototype
=
undefined
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
undefined
'
)
;
newTarget
.
prototype
=
null
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
null
'
)
;
newTarget
.
prototype
=
false
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
a
Boolean
'
)
;
newTarget
.
prototype
=
'
str
'
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
a
String
'
)
;
newTarget
.
prototype
=
Symbol
(
)
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
a
Symbol
'
)
;
newTarget
.
prototype
=
-
Infinity
;
err
=
Reflect
.
construct
(
TypeError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
TypeError
.
prototype
'
newTarget
.
prototype
is
a
Number
'
)
;
reportCompare
(
0
0
)
;
